# licenzio

./: .gitignore  LICENSE  Makefile  README.md  dune-project  licenzio.opam
.github/workflows/: release.yml
licenses/: zlib.txt
src/: dune  file.ml  io_msg.ml  license.ml  main.ml  utils.ml
test/: dune
